# mkdsdecomp

./: .gitignore  .gitmodules  LICENSE  README.md  build-docs.sh  export.py  ida-re-export.py  ida_decompile.h  idadb-export.py
asmhack-example/: README.md  arm9.json  ncpatcher.json
asmhack-example/include/: debug.h  demo.h
asmhack-examples/: Makefile  README.md  arm9.json  ncpatcher.json
asmhack-examples/asmhacks/: custom-dialogs-scene.c  hello-world.c  test-scene-as-emblem.c
asmhack-examples/include/: asmhack-base.h  asmhack-util.h  debug-asm.h  debug.h
asmhack-examples/source/: asmhack-base.c  debug-asm.s
docs/: 404.html  index.html  save-editor.js  save-editor.wasm  sitemap.xml
docs/fs/: index.html
docs/logic/: index.html
docs/navigation/: index.html
docs/save-editor/: index.html  save-editor.js  save-editor.wasm
docs/search/: search_index.json
include/: mkds-decomp-syms.h  mkds-decomp-types.h  mkds-decomp.h  symbols.x
libntr/: Makefile  arm9.ld
libntr/arm7/: Makefile
libntr/arm9/: Makefile
libntr/common/: Makefile
libntr/include/: arm.h  base.h  base_asm.h  mem.h  os.h
libntr/source/: arm.s  mem.c  os.s  util.c
mkds/: Makefile
mkds-docs/: favicon.xcf  mkdocs.yml
mkds-docs/docs/: index.md  navigation.md
mkds/arm7/: Makefile
mkds/arm9/: Makefile
mkds/include/: base.asm.h  base.h  mem.h  os.h  util.h
mkds/nitrofs/: dummy.txt
re-export/: mkds-eu-decomp-symbols.x  mkds-eu-symbols.x
save-editor/: Makefile
tools/mkdsutil/: CMakeLists.txt
tools/mkdsutil/include/: args.hxx
tools/mkdsutil/source/: main.cpp
(+145 files in other folders)
